# sidecar-logit-bias

./: CMakeLists.txt  README.md  logit_bias.cpp
tools/: anti-refusal.txt  from_phrases.py  write.py
